--- a/works.html
+++ b/works.html
@@ -32,27 +32,27 @@
           <div class="switch-wrapper">
           <main class="main">
             <section class="gallery">
-              <div class="gallery__heading">Works Gallery</div>
+              <div class="gallery__heading"></div>
                 <div class="gallery__container">
                   <div class="gallery__slide slide-1">
                     <div class="slide__img "></div>
-                    <div class="slide__title">TechCues</div>
+                    <div class="slide__title"></div>
                   </div>
                   <div class="gallery__slide slide-2">
                     <div class="slide__img "></div>
-                    <div class="slide__title">Escape</div>
+                    <div class="slide__title"></div>
                     </div>
                   <div class="gallery__slide slide-3">
                     <div class="slide__img "></div>
-                    <div class="slide__title">Velocity</div>
+                    <div class="slide__title"></div>
                     </div>
                   <div class="gallery__slide slide-4">
                     <div class="slide__img "></div>
-                    <div class="slide__title">Moxa</div>
+                    <div class="slide__title"></div>
                   </div>
                   <div class="gallery__slide slide-5">
                     <div class="slide__img "></div>
-                    <div class="slide__title">Moxa</div>
+                    <div class="slide__title"></div>
                   </div>
                   
                 </div>
